--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "firebase": "^7.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
