--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "@types/yup": "^0.26.34",
     "connected-react-router": "^6.8.0",
     "firebase": "^7.13.1",
+    "formik": "^2.1.4",
+    "formik-material-ui": "^2.0.0-beta.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -22,8 +25,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.2",
     "redux-saga": "^1.1.3",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
