--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,5 @@ jobs:
       run: |
         git config --global user.email ${{secrets.GITHUB_EMAIL}}
         git config --global user.name ${{secrets.GITHUB_USERNAME}}
-        git remote set-url origin https://${{secrets.GITHUB_PERSONAL_TOKEN}}@github.com/${{secrets.GITHUB_USERNAME}}/reservation_service.git
+        git remote set-url origin https://${{secrets.A_T}}@github.com/${{secrets.GITHUB_USERNAME}}/reservation_service.git
         npm run deploy
