--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reservation_service",
   "version": "0.1.0",
+  "homepage": "https://valeravilks.github.io/reservation-service",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.8",
@@ -36,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.3"
+    "@types/react-router-dom": "^5.1.3",
+    "gh-pages": "^2.2.0"
   }
 }
