--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       run: npm install
     - name: Deploy to GH Pages
       run: |
-        git config --global user.email ${{secrets.GITHUB_EMAIL}}
-        git config --global user.name ${{secrets.GITHUB_USERNAME}}
-        git remote set-url origin https://${{secrets.A_T}}@github.com/${{secrets.GITHUB_USERNAME}}/reservation_service.git
+        git config --global user.email ${{GITHUB_EMAIL}}
+        git config --global user.name ${{GITHUB_USERNAME}}
+        git remote set-url origin https://${{secrets.A_T}}@github.com/${{secrets.USERNAME}}/reservation_service.git
         npm run deploy
