--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reservation_service",
   "version": "0.1.0",
-  "homepage": "/reservation-service",
+  "homepage": "http://valeravilks.github.io/reservation-service",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.8",
