Test Auto deploy 3

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: FTP-Deploy
         uses: SamKirkland/FTP-Deploy-Action@master
         env:
-          FTP_SERVER :  ftp://${{secrets.FTP_SERVER}}/
-          FTP_PASSWORD :  ${{secrets.FTP_PASSWORD}}
-          FTP_USERNAME :  ${{secrets.FTP_USERNAME}}@${{secrets.FTP_SERVER}}
-          LOCAL_DIR : build
+          ftp-server :  ${{secrets.FTP_SERVER2}}
+          ftp-username :  ${{secrets.FTP_PASSWORD}}
+          ftp-password :  ${{secrets.FTP_USERNAME}}
+          local-dir : build
