--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 on: push
-name: Publish Website
+name: Build and Publish Front End Framework Website
 jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action
@@ -8,6 +8,20 @@ jobs:
       - uses: actions/checkout@master
         with:
           fetch-depth: 2
+
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+
+      - name: Build Project
+        run: |
+          npm install
+          npm run build --if-present
+
+      - name: List output files
+        run: ls
+
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@3.0.0
         with:
