--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,19 +22,10 @@ jobs:
       - name: List output files
         run: ls
 
-      - uses: actions/checkout@v2
-      - name: Upload ftp
-        uses: sebastianpopp/ftp-action@releases/v2
+      - name: FTP-Deploy-Action
+        uses: SamKirkland/FTP-Deploy-Action@3.0.0
         with:
-          host: 213.226.126.192
-          user: admin_rservice
-          password: ${{ secrets.FTP_PASSWORD }}
-          localDir: "build"
-
-#      - name: FTP-Deploy-Action
-#        uses: SamKirkland/FTP-Deploy-Action@3.0.0
-#        with:
-#          ftp-server: 213.226.126.192
-#          ftp-username: admin_rservice
-#          ftp-password: ${{ secrets.FTP_PASSWORD }}
-#          local-dir: ./build/
+          ftp-server: 213.226.126.192
+          ftp-username: admin_rservice
+          ftp-password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: build
